[tool.poetry]
name = "jekyllnb"
version = "0.3.1"
description = "Convert Jupyter Notebooks to Jekyll-ready Markdown files"
authors = ["Kevin Lane <lane.kevin.a@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/klane/jekyllnb"
documentation = "https://jekyllnb.readthedocs.io"
keywords = ["jekyll", "jupyter", "nbconvert"]
classifiers = [
    "Framework :: Jupyter",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = ">=3.9"
nbconvert = "^7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
pytest-sugar = "^1.0"
pre-commit = "^4.0"
tox = "^4.0"

[tool.poetry.plugins."console_scripts"]
"jupyter-jekyllnb" = "jekyllnb.jekyllnb:JekyllNB.launch_instance"

[tool.poetry.plugins."nbconvert.exporters"]
"jekyll" = "jekyllnb:JekyllExporter"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
known_third_party = ["nbconvert", "pytest", "pytest_lazyfixture", "traitlets"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
skipsdist = true
envlist = py{36,37,38,39},lint

[testenv]
skip_install = true
whitelist_externals = poetry
commands =
    poetry install
    poetry run pytest tests/ --cov=jekyllnb {posargs}

[testenv:lint]
deps = pre-commit
commands =
    pre-commit install-hooks
    pre-commit run --all-files

[flake8]
ignore = B950,E203,W503
max-line-length = 88
max-complexity = 10
select = B,C,E,F,W,T4,B9
"""
