[tool.poetry]
name = "jekyllnb"
version = "0.3.1"
description = "Convert Jupyter Notebooks to Jekyll-ready Markdown files"
authors = ["Kevin Lane <lane.kevin.a@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/klane/jekyllnb"
documentation = "https://jekyllnb.readthedocs.io"
keywords = ["jekyll", "jupyter", "nbconvert"]
classifiers = [
    "Framework :: Jupyter",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.9"
nbconvert = "^7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
pytest-sugar = "^1.0"
pre-commit = "^4.0"
tox = "^4.0"

[tool.poetry.plugins."console_scripts"]
"jupyter-jekyllnb" = "jekyllnb.jekyllnb:JekyllNB.launch_instance"

[tool.poetry.plugins."nbconvert.exporters"]
"jekyll" = "jekyllnb:JekyllExporter"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
exclude = ["*.ipynb"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.ruff.lint]
select = [
    "A",        # flake8-builtins
    "B",        # flake8-bugbear
    "BLE",      # flake8-blind-except
    "C4",       # flake8-comprehensions
    "C90",      # mccabe
    "D",        # pydocstyle
    "E",        # pycodestyle (error)
    "ERA",      # eradicate
    "F",        # pyflakes
    "I",        # isort
    "PERF",     # perflint
    "PGH",      # pygrep-hooks
    "PIE",      # flake8-pie
    "PL",       # pylint
    "Q",        # flake8-quotes
    "RUF",      # ruff-specific rules
    "S",        # flake8-bandit
    "W",        # pycodestyle (warning)
    "UP",       # pyupgrade
]
ignore = [
    "D100",     # https://docs.astral.sh/ruff/rules/undocumented-public-module/
    "D104",     # https://docs.astral.sh/ruff/rules/undocumented-public-package/
    "D203",     # https://docs.astral.sh/ruff/rules/one-blank-line-before-class/
    "D213",     # https://docs.astral.sh/ruff/rules/multi-line-summary-second-line/
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "S101", "S603", "S607"]
