[project]
name = "jekyllnb"
version = "0.3.1"
description = "Convert Jupyter Notebooks to Jekyll-ready Markdown files"
requires-python = ">=3.9"
dependencies = [
    "nbconvert>=7.16.6",
]
authors = [{name = "Kevin Lane", email = "lane.kevin.a@gmail.com"}]
license = "MIT"
readme = "README.md"
keywords = ["jekyll", "jupyter", "nbconvert"]
classifiers = [
    "Framework :: Jupyter",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]

[project.urls]
Repository = "https://github.com/klane/jekyllnb"
Documentation = "https://jekyllnb.readthedocs.io"
Issues = "https://github.com/klane/jekyllnb/issues"
Changelog = "https://jekyllnb.readthedocs.io/en/latest/changelog/"

[project.scripts]
jupyter-jekyllnb = "jekyllnb.jekyllnb:JekyllNB.launch_instance"

[project.entry-points."nbconvert.exporters"]
jekyll = "jekyllnb:JekyllExporter"

[dependency-groups]
dev = [
    "pyright>=1.1.402",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "pytest-lazy-fixtures>=1.1.4",
    "pytest-sugar>=1.0.0",
    "pytest-xdist[psutil]>=3.7.0",
    "ruff>=0.11.13",
]
docs = [
    "mkdocs>=1.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
extend-exclude = ["hello-world.ipynb"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.ruff.lint]
select = [
    "A",        # flake8-builtins
    "B",        # flake8-bugbear
    "BLE",      # flake8-blind-except
    "C4",       # flake8-comprehensions
    "C90",      # mccabe
    "D",        # pydocstyle
    "E",        # pycodestyle (error)
    "ERA",      # eradicate
    "F",        # pyflakes
    "I",        # isort
    "PERF",     # perflint
    "PGH",      # pygrep-hooks
    "PIE",      # flake8-pie
    "PL",       # pylint
    "Q",        # flake8-quotes
    "RUF",      # ruff-specific rules
    "S",        # flake8-bandit
    "W",        # pycodestyle (warning)
    "UP",       # pyupgrade
]
ignore = [
    "D100",     # https://docs.astral.sh/ruff/rules/undocumented-public-module/
    "D104",     # https://docs.astral.sh/ruff/rules/undocumented-public-package/
    "D203",     # https://docs.astral.sh/ruff/rules/one-blank-line-before-class/
    "D213",     # https://docs.astral.sh/ruff/rules/multi-line-summary-second-line/
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "S101", "S603", "S607"]

[tool.pytest.ini_options]
addopts = ["--cov", "jekyllnb", "-n", "logical"]
testpaths = ["tests"]
